--- a/org/lateralgm/messages/messages_cs_CZ.properties
+++ b/org/lateralgm/messages/messages_cs_CZ.properties
@@ -104,12 +104,12 @@ OutputManager.SESSIONSTARTED=Session Started
 
 # File menu
 GmMenuBar.MENU_FILE=	File				F
-GmMenuBar.NEW=			New					N
-GmMenuBar.OPEN=			Open...				O
+GmMenuBar.NEW=			Nový					N
+GmMenuBar.OPEN=			Otevřít...				O
 GmMenuBar.RECENTFILES=  Recent Files		R
 GmMenuBar.CLEARRECENT=  Clear Recent Files	C
-GmMenuBar.SAVE=			Save				S
-GmMenuBar.SAVEAS=		Save As...			A
+GmMenuBar.SAVE=			Uložit				S
+GmMenuBar.SAVEAS=		Uložit jako...			A
 GmMenuBar.ADVANCED=		Advanced Mode		V
 GmMenuBar.PREFERENCES=	Preferences...		P
 GmMenuBar.EXIT=			Exit				X
