--- a/org/lateralgm/messages/messages_cs_CZ.properties
+++ b/org/lateralgm/messages/messages_cs_CZ.properties
@@ -1,32 +1,13 @@
 ### Package components ###
 
-HelpDialog.MALFORMED_TITLE=Malformed URI
-HelpDialog.MALFORMED_MESSAGE=<html>"{0}"<br><p>The URI specified in preferences appears to be \
-	malformed.<br> Verify that you have entered a valid URI and try again.</p></html>
+ColorSelect.CHOOSE_TITLE=Vyberte barvu
 
-HelpDialog.UNAVAILABLE_TITLE=Unavailable URI
-HelpDialog.UNAVAILABLE_MESSAGE=<html>"{0}"<br><p>The URI specified in preferences appears to be \
-	unavailable.<br> Verify that you have entered a valid URI or try again later.</p></html>
-
-ExternalEditorDialog.NOT_SUPPORTED_TITLE=Desktop Editing Unsupported
-ExternalEditorDialog.NOT_SUPPORTED_MESSAGE=<html><p>The current platform does not support the desktop \
-	edit operation.<br><br>Configure an external editor command for this resource in preferences.\
-	</p></html>
-ExternalEditorDialog.FAILED_TITLE=External Editing Failed
-ExternalEditorDialog.FAILED_MESSAGE=<html><p style='width: 500px;'>The desktop either does not \
-	have an associated editor installed or the associated editor failed to be launched.<br><br>\
-	Verify that you have installed a compatible external editor and registered it for the \
-	appropriate MIME type or configure an external editor command for this resource in \
-	preferences.</p></html>
-
-ColorSelect.CHOOSE_TITLE=Choose a Color
-
-MDIMenu.WINDOW=			Window				W
+MDIMenu.WINDOW=			Okno				W
 MDIMenu.CASCADE=		Cascade Frames		A
-MDIMenu.ARRANGE_ICONS=	Arrange Icons		I
-MDIMenu.CLOSE_ALL=		Close All			L
-MDIMenu.MINIMIZE_ALL=	Minimize All		M
-MDIMenu.CLOSE=			Close				C
+MDIMenu.ARRANGE_ICONS=	Uspořádat ikonky		I
+MDIMenu.CLOSE_ALL=		Zavřít všechno			L
+MDIMenu.MINIMIZE_ALL=	Minimalizovat všechno		M
+MDIMenu.CLOSE=			Zavřít				C
 MDIMenu.CLOSE_OTHERS=	Close All Others	O
 
 Moment.STEP=Step
@@ -106,33 +87,33 @@ OutputManager.SESSIONSTARTED=Session Started
 GmMenuBar.MENU_FILE=	File				F
 GmMenuBar.NEW=			Nový					N
 GmMenuBar.OPEN=			Otevřít...				O
-GmMenuBar.RECENTFILES=  Recent Files		R
-GmMenuBar.CLEARRECENT=  Clear Recent Files	C
+GmMenuBar.RECENTFILES=  Poslední soubory		R
+GmMenuBar.CLEARRECENT=  Vymazat poslední soubory	C
 GmMenuBar.SAVE=			Uložit				S
 GmMenuBar.SAVEAS=		Uložit jako...			A
-GmMenuBar.ADVANCED=		Advanced Mode		V
+GmMenuBar.ADVANCED=		Pokročilý mód		V
 GmMenuBar.PREFERENCES=	Preferences...		P
-GmMenuBar.EXIT=			Exit				X
+GmMenuBar.EXIT=			Konec				X
 
 # Edit menu
-GmMenuBar.MENU_EDIT=		Edit		E
-GmMenuBar.MENU_INSERT=		Insert		I
+GmMenuBar.MENU_EDIT=		Upravit		E
+GmMenuBar.MENU_INSERT=		Načíst		I
 GmMenuBar.MENU_ADD=			Add			A
-GmMenuBar.INSERT_GROUP=		Group		G
-GmMenuBar.ADD_GROUP=		Group		G
+GmMenuBar.INSERT_GROUP=		Skupina		G
+GmMenuBar.ADD_GROUP=		Skupina		G
 GmMenuBar.INSERT=			{0}
 GmMenuBar.ADD=				{0}
-GmMenuBar.RENAME=			Rename		R
-GmMenuBar.DELETE=			Delete		D
-GmMenuBar.DUPLICATE=		Duplicate	C
+GmMenuBar.RENAME=			Přejmenovat		R
+GmMenuBar.DELETE=			Smazat		D
+GmMenuBar.DUPLICATE=		Duplikovat	C
 GmMenuBar.PROPERTIES=		Properties	P
 
 # Resources menu
 GmMenuBar.MENU_RESOURCES=	Resources			R
 GmMenuBar.CHECKNAMES=		Check Names			N
 GmMenuBar.CHECKIDS=			Check Ids			I
-GmMenuBar.FIND=				Find...				F
-GmMenuBar.EXPAND=			Expand				E
+GmMenuBar.FIND=				Najít...				F
+GmMenuBar.EXPAND=			Rozšíření				E
 GmMenuBar.COLLAPSE=			Collapse			C
 
 FindResourceDialog.TITLE=Find Resource
@@ -140,7 +121,7 @@ FindResourceDialog.MESSAGE=Resource name:
 
 # Help menu
 GmMenuBar.MENU_HELP=		Help				H
-GmMenuBar.DOCUMENTATION=	Documentation		D
+GmMenuBar.DOCUMENTATION=	Dokumentace		D
 GmMenuBar.WEBSITE=			Website				W
 GmMenuBar.COMMUNITY=		Community			C
 GmMenuBar.ISSUE=			Submit Issue		S
@@ -151,7 +132,7 @@ GmMenuBar.EXPLOREPROJECT=	Explore Project		X
 DocumentUndoManager.UNDO=Undo
 DocumentUndoManager.REDO=Redo
 
-AboutBox.TITLE=About LateralGM
+AboutBox.TITLE=O LateralGM
 AboutBox.ABOUT=<h1 style="white-space: nowrap">Copyright &copy; 2006-2020</h1>\
 	<p style="white-space: nowrap">Version: {0}<br><br>\
 	IsmAvatar \
@@ -216,11 +197,11 @@ StreamDecoder.SEEK_PASSED=Can''t seek to {0} from {1}, position already passed (
 
 ### Package main ###
 
-FileChooser.PROJECTCREATED=Project Created
-FileChooser.PROJECTLOADED=Project Loaded
-FileChooser.PROJECTSAVED=Project Saved
+FileChooser.PROJECTCREATED=Projekt byl vytvořen
+FileChooser.PROJECTLOADED=Projekt našten
+FileChooser.PROJECTSAVED=Projekt byl uložen
 
-FileChooser.ALL_SUPPORTED=All supported files
+FileChooser.ALL_SUPPORTED=Všechny podporované soubory
 FileChooser.FORMAT_GMX=Game Maker Studio Files (*.project.gmx)
 FileChooser.FORMAT_READERS_GM=Old Game Maker Files (*.gm81;*.gmk;*.gm6;*.gmd)
 FileChooser.FORMAT_WRITERS_GM=Old Game Maker Files (*.gm81;*.gmk;*.gm6)
@@ -249,14 +230,14 @@ FileChooser.ERROR_BACKUP=	Could not move {0} to a backup.\n\
 
 FileChooser.FORCE_EXT=Force extension
 FileChooser.CONFIRM_EXTENSION=Extension {0} does not match version {1}. Use anyway?
-FileChooser.CONFIRM_REPLACE_TITLE=Save File
+FileChooser.CONFIRM_REPLACE_TITLE=Uložit soubor
 FileChooser.CONFIRM_REPLACE={0} already exists. Do you wish to replace it?
 
-FileChooser.ERROR_SAVE_TITLE=Error Saving File
+FileChooser.ERROR_SAVE_TITLE=Chyba při ukládání souboru
 FileChooser.ERROR_SAVE=An error occurred while saving to {0}:\n\
 					{1} - {2}
 
-FileChooser.NOT_FOUND_TITLE=File not found!
+FileChooser.NOT_FOUND_TITLE=Soubor nenalezen!
 FileChooser.NOT_FOUND_MESSAGE=Check the file name and try again.
 FileChooser.CONFIRM_OVERWRITE_TITLE=File already exists!
 FileChooser.CONFIRM_OVERWRITE_MESSAGE=Would you like to overwrite the file anyway?
@@ -277,40 +258,40 @@ ErrorDialog.COPY=Copy to Clipboard
 ErrorDialog.SUBMIT=Submit Report
 ErrorDialog.CANCEL=Close
 
-ProgressDialog.GMX_LOADING=			GMX Loading
+ProgressDialog.GMX_LOADING=			GMX Načítání
 ProgressDialog.GMX_SAVING=			GMX Saving
 ProgressDialog.GMK_LOADING=			GMK Loading
 ProgressDialog.GMK_SAVING=			GMK Saving
 ProgressDialog.DOCUMENT=			Document
 ProgressDialog.SPRITES=				Sprites
-ProgressDialog.SOUNDS=				Sounds
-ProgressDialog.BACKGROUNDS=			Backgrounds
-ProgressDialog.PATHS=				Paths
+ProgressDialog.SOUNDS=				Hudba
+ProgressDialog.BACKGROUNDS=			Pozadí
+ProgressDialog.PATHS=				Cesta
 ProgressDialog.SCRIPTS=				Scripts
 ProgressDialog.SHADERS=				Shaders
 ProgressDialog.FONTS=				Fonts
 ProgressDialog.TIMELINES=			Timelines
-ProgressDialog.OBJECTS=				Objects
-ProgressDialog.ROOMS=				Rooms
+ProgressDialog.OBJECTS=				Objekty
+ProgressDialog.ROOMS=				Místnost
 ProgressDialog.INCLUDEFILES=		Include Files
 ProgressDialog.TRIGGERS=			Triggers
 ProgressDialog.CONSTANTS=			Constants
 ProgressDialog.PACKAGES=			Packages
 ProgressDialog.EXTENSIONS=			Extensions
 ProgressDialog.GAMEINFORMATION=		Game Information
-ProgressDialog.SETTINGS=			Game Settings
+ProgressDialog.SETTINGS=			Nastavení hry
 ProgressDialog.POSTPONED=			Postponed References
 ProgressDialog.ROOMEXECUTION=		Room Execution
 ProgressDialog.LIBRARYCREATION=		Library Creation
-ProgressDialog.FILETREE=			File Tree
+ProgressDialog.FILETREE=			Strom souborů
 ProgressDialog.FINISHED=			Finished
 
 Listener.CONFIRM_NEW=Unsaved changes will be lost. Start a new game anyway?
-Listener.CONFIRM_NEW_TITLE=New Game?
-Listener.FILE_NOT_FOUND_TITLE=File not found!
+Listener.CONFIRM_NEW_TITLE=Nová hra?
+Listener.FILE_NOT_FOUND_TITLE=Soubor nenalezen!
 
-Listener.INPUT_GROUPNAME=Group Name?
-Listener.DEFAULT_GROUPNAME=Group
+Listener.INPUT_GROUPNAME=Jméno skupiny?
+Listener.DEFAULT_GROUPNAME=Skupina
 
 Listener.CONFIRM_DELETERESOURCE=Delete resources in selection?
 Listener.CONFIRM_DELETERESOURCE_TITLE=Confirm Deletion
@@ -402,11 +383,11 @@ GmMenuBar.MNEMONIC_OBJ=O
 GmMenuBar.MNEMONIC_RMM=R
 
 # Hints for LGM tool bar buttons
-Toolbar.OPEN=Open...
-Toolbar.SAVE=Save
-Toolbar.SAVEAS=Save As...
-Toolbar.ADD=	New {0}
-Toolbar.NEW=New
+Toolbar.OPEN=Otevřít...
+Toolbar.SAVE=Uložit
+Toolbar.SAVEAS=Uložit jako...
+Toolbar.ADD=	Nový {0}
+Toolbar.NEW=Nový
 Toolbar.EVENT_BUTTON=Show Event Selector
 Toolbar.PREFERENCES=Preferences
 Toolbar.DOCUMENTATION=Documentation
@@ -414,7 +395,7 @@ Toolbar.CONFIGURATION=Configuration:
 Toolbar.CST=Constants
 Toolbar.GMI=Game Information
 Toolbar.PKG=Extension Packages
-Toolbar.GMS=Game Settings
+Toolbar.GMS=Nastavení hry
 Toolbar.CONFIG_MANAGE=Manage Configurations
 
 LGM.KEEPCHANGES=It appears that changes to the project have not been saved.\n\
@@ -481,19 +462,19 @@ MainEvent.EVENTS = {0} Events
 
 ## Create
 # Main Category
-MainEvent.EVENT0 = Create
+MainEvent.EVENT0 = Vytvořit
 # Format Expression for hint text
-MainEvent.EVENT_HINT0 = {0} Event
+MainEvent.EVENT_HINT0 = {0} Vytvořit
 # Individual Event Names
-Event.EVENT0_0 = Create
+Event.EVENT0_0 = Vytvořit
 
 ## Destroy
 # Main Category
-MainEvent.EVENT1 = Destroy
+MainEvent.EVENT1 = Zničit
 # Format Expression for hint text
-MainEvent.EVENT_HINT1 = {0} Event
+MainEvent.EVENT_HINT1 = {0} Událost
 # Individual Event Names
-Event.EVENT1_0 = Destroy
+Event.EVENT1_0 = Zničit
 
 ## Alarm
 # Main Category
@@ -506,17 +487,17 @@ Event.EVENT2_X = Alarm {0}
 
 ## Step
 # Main Category
-MainEvent.EVENT3 = Step
+MainEvent.EVENT3 = Kroky
 # Format Expression for hint/report text
-MainEvent.EVENT_HINT3 = {0} Event 
+MainEvent.EVENT_HINT3 = {0} Událost 
 # Individual Event Names
-Event.EVENT3_0 = Normal Step
-Event.EVENT3_1 = Begin Step
-Event.EVENT3_2 = End Step
+Event.EVENT3_0 = Normální krokování
+Event.EVENT3_1 = Kroky na začátku
+Event.EVENT3_2 = Kroky na konci
 
 ## Collision
 # Main Category
-MainEvent.EVENT4 = Collision
+MainEvent.EVENT4 = Kolize
 # Format Expression for hint/report text
 MainEvent.EVENT_HINT4 = Collision Event with {0}
 # Individual Event Names
@@ -525,26 +506,26 @@ Event.EVENT4_X = {0}
 
 ## Keyboard
 # Main Category
-MainEvent.EVENT5 = Keyboard
+MainEvent.EVENT5 = Klávesnice
 # Format Expression for hint/report text
 MainEvent.EVENT_HINT5 = Keyboard Event For {0} Key
 # Individual Event Names
 # note: X indicates a string that is formatted
 Event.EVENT5_X = <{0}>
 
-Event.NO_KEY = No Key
-Event.ANY_KEY = Any Key
+Event.NO_KEY = Žádná klávesa
+Event.ANY_KEY = Jakákoli klávesa
 
 ## Mouse
 # Main Category
-MainEvent.EVENT6 = Mouse
+MainEvent.EVENT6 = Myš
 # Format Expression for hint/report text
-MainEvent.EVENT_HINT6 = Mouse Event for {0}
+MainEvent.EVENT_HINT6 = Událost myši pro {0}
 # Individual Event Names (in menu order)
 Event.EVENT6_BUTTON =	{2,choice,0#|1#Global }{0,choice,-1#No|0#Left|1#Right|2#Middle} \
 						{1,choice,0#Button|1#Pressed|2#Released}
-Event.EVENT6_10 = Mouse Enter
-Event.EVENT6_11 = Mouse Leave
+Event.EVENT6_10 = Stisknuto tlačítko myši
+Event.EVENT6_11 = Puštěné tlačítko myši
 Event.EVENT6_60 = Mouse Wheel Up
 Event.EVENT6_61 = Mouse Wheel Down
 Event.EVENT6_JOYSTICK = Joystick {0} {1,choice,0#Left|1#Right|2#Up|3#Down|4#Button {2}}
@@ -596,21 +577,21 @@ Event.EVENT8_76 = Pre Draw
 Event.EVENT8_77 = Post Draw
 
 ## Key Press
-MainEvent.EVENT9 = Key Press
+MainEvent.EVENT9 = Stisknuta klávesa
 # Format Expression for hint/report text
 MainEvent.EVENT_HINT9 = Key Pressed Event For {0}
 # Individual Event Names
 # note: X indicates a string that is formatted
-Event.EVENT9_X = press <{0}>
+Event.EVENT9_X = stisk <{0}>
 
 ## Key Release
 # Main Category
-MainEvent.EVENT10 = Key Release
+MainEvent.EVENT10 = Puštěna klávesa
 # Format Expression for hint/report text
 MainEvent.EVENT_HINT10 = Key Release Event For {0}
 # Individual Event Names
 # note: X indicates a string that is formatted
-Event.EVENT10_X = release <{0}>
+Event.EVENT10_X = uvolněna <{0}>
 
 ## Triggers
 MainEvent.EVENT11 = Trigger
@@ -622,7 +603,7 @@ Event.EVENT11_X = Unsupported <{0}>
 
 #Action
 Action.UNKNOWN = <Unknown Action>
-Action.RELATIVE = relative 
+Action.RELATIVE = relativní 
 Action.NOT = not 
 Action.APPLIES = For all {0}: 
 Action.APPLIES_OTHER = For other object: 
