--- a/org/lateralgm/messages/messages_cs_CZ.properties
+++ b/org/lateralgm/messages/messages_cs_CZ.properties
@@ -8,29 +8,29 @@ MDIMenu.ARRANGE_ICONS=	Uspořádat ikonky		I
 MDIMenu.CLOSE_ALL=		Zavřít všechno			L
 MDIMenu.MINIMIZE_ALL=	Minimalizovat všechno		M
 MDIMenu.CLOSE=			Zavřít				C
-MDIMenu.CLOSE_OTHERS=	Close All Others	O
+MDIMenu.CLOSE_OTHERS=	Zavřít všechny ostatní	O
 
 Moment.STEP=Step
 
 #Configuration Manager
-ConfigurationManager.TITLE=Configuration Manager
-ConfigurationManager.ADD=Create New Configuration
-ConfigurationManager.COPY=Duplicate Selected Configuration
-ConfigurationManager.DELETE=Delete Selected Configurations
-ConfigurationManager.EDIT_SETTINGS=Edit Selected Configuration
-ConfigurationManager.EDIT_CONSTANTS=Edit Selected Configuration's Constants
+ConfigurationManager.TITLE=Správce konfigurace
+ConfigurationManager.ADD=Vytvořit novou konfuguraci
+ConfigurationManager.COPY=Duplikovat novou konfiguraci
+ConfigurationManager.DELETE=Smazat vybrané konfugurace
+ConfigurationManager.EDIT_SETTINGS=Upravit vybranou konfiguraci
+ConfigurationManager.EDIT_CONSTANTS=Upravit vybrané Configuration's Constants
 ConfigurationManager.NAME=Name:
 
 #Image Effects Frame
 EffectsFrame.TITLE=Image Effects
-EffectsFrame.BEFORE=Before
-EffectsFrame.AFTER=After
-EffectsFrame.CLOSE=Close
+EffectsFrame.BEFORE=Před
+EffectsFrame.AFTER=Po
+EffectsFrame.CLOSE=Zavřít
 EffectsFrame.APPLY=Apply
 
 ImageEffects.IntensityEffect=Intensity
-ImageEffects.BlackAndWhiteEffect=Black and White
-ImageEffects.OpacityEffect=Opacity
+ImageEffects.BlackAndWhiteEffect=Černobílí
+ImageEffects.OpacityEffect=Neprůhlednost
 ImageEffects.InvertEffect=Invert Color
 ImageEffects.EdgeDetectEffect=Edge Detection
 ImageEffects.EmbossColorEffect=Emboss
