--- a/org/lateralgm/messages/messages_cs_CZ.properties
+++ b/org/lateralgm/messages/messages_cs_CZ.properties
@@ -28,33 +28,33 @@ EffectsFrame.AFTER=Po
 EffectsFrame.CLOSE=Zavřít
 EffectsFrame.APPLY=Apply
 
-ImageEffects.IntensityEffect=Intensity
+ImageEffects.IntensityEffect=Intenzita
 ImageEffects.BlackAndWhiteEffect=Černobílí
 ImageEffects.OpacityEffect=Neprůhlednost
-ImageEffects.InvertEffect=Invert Color
-ImageEffects.EdgeDetectEffect=Edge Detection
-ImageEffects.EmbossColorEffect=Emboss
+ImageEffects.InvertEffect=Invertovat barvvu
+ImageEffects.EdgeDetectEffect=Detekce hrany
+ImageEffects.EmbossColorEffect=Reliéf
 ImageEffects.BlurEffect=Blur
 ImageEffects.SharpenEffect=Sharpen
-ImageEffects.RemoveColorEffect=Remove Color
-ImageEffects.FadeColorEffect=Fade Color
-ImageEffects.RemoveTransparencyEffect=Remove Transparency
-ImageEffects.ColorizeEffect=Colorize
+ImageEffects.RemoveColorEffect=ROdstranit barvu
+ImageEffects.FadeColorEffect=Fade barva
+ImageEffects.RemoveTransparencyEffect=Odstranit průhlednost
+ImageEffects.ColorizeEffect=Zabarvení
 
-ImageEffects.INTENSITY=Intensity:
+ImageEffects.INTENSITY=Intenzita:
 ImageEffects.TOLERANCE=Tolerance:
-ImageEffects.TRANSPARENCY=Transparency:
+ImageEffects.TRANSPARENCY=Průhlednost:
 ImageEffects.COLOR=Color:
-ImageEffects.BRIGHTNESS=Brightness:
-ImageEffects.CONTRAST=Contrast:
+ImageEffects.BRIGHTNESS=Jas:
+ImageEffects.CONTRAST=Kontrast:
 ImageEffects.RELATIVE=Relative
 ImageEffects.HUE=Hue:
-ImageEffects.SATURATION=Saturation:
+ImageEffects.SATURATION=Nysitění:
 ImageEffects.VALUE=Value:
-ImageEffects.REPETITIONS=Repetitions
+ImageEffects.REPETITIONS=Opakování
 
 # Tree Filter
-TreeFilter.CREATION_CODE=Creation Code
+TreeFilter.CREATION_CODE=Vytvořit kód
 TreeFilter.INSTANCE=Instance
 TreeFilter.VERTEX_CODE=Vertex Code
 TreeFilter.FRAGMENT_CODE=Fragment Code
@@ -65,26 +65,26 @@ TreeFilter.REGEX=Regular Expression
 TreeFilter.SEARCHIN=Search in Resources
 TreeFilter.PRUNERESULTS=Prune Results
 TreeFilter.SEARCHFOR=Search for Resources...
-TreeFilter.NEXT=Next
-TreeFilter.PREV=Previous
-TreeFilter.SET=Settings
-TreeFilter.TITLE=Tree Filter Settings
-TreeFilter.CLOSE=Close
-TreeFilter.TAB_RESOURCES=Resources
-TreeFilter.TAB_SEARCHRESULTS=Search Results
-TreeFilter.TAB_EVENTS=Events
-TreeFilter.COPY=Copy
-TreeFilter.SELECTALL=Select All
-TreeFilter.EXPANDALL=Expand All
-TreeFilter.COLLAPSEALL=Collapse All
+TreeFilter.NEXT=Další
+TreeFilter.PREV=Předchozí
+TreeFilter.SET=Nastavení
+TreeFilter.TITLE=Nastavit filtr stromu
+TreeFilter.CLOSE=Zavřeno
+TreeFilter.TAB_RESOURCES=zdroje
+TreeFilter.TAB_SEARCHRESULTS=Výsledky vyhledávání
+TreeFilter.TAB_EVENTS=Událost
+TreeFilter.COPY=Kopírovat
+TreeFilter.SELECTALL=Vybrat všechno
+TreeFilter.EXPANDALL=Expand všechno
+TreeFilter.COLLAPSEALL=Collapse všechno
 
 # Output Manager
-OutputManager.COPY=Copy
-OutputManager.SELALL=Select All
-OutputManager.SESSIONSTARTED=Session Started
+OutputManager.COPY=Kopírovat
+OutputManager.SELALL=Vybrat vše
+OutputManager.SESSIONSTARTED=Zahájení relace
 
 # File menu
-GmMenuBar.MENU_FILE=	File				F
+GmMenuBar.MENU_FILE=	Soubor				F
 GmMenuBar.NEW=			Nový					N
 GmMenuBar.OPEN=			Otevřít...				O
 GmMenuBar.RECENTFILES=  Poslední soubory		R
@@ -92,7 +92,7 @@ GmMenuBar.CLEARRECENT=  Vymazat poslední soubory	C
 GmMenuBar.SAVE=			Uložit				S
 GmMenuBar.SAVEAS=		Uložit jako...			A
 GmMenuBar.ADVANCED=		Pokročilý mód		V
-GmMenuBar.PREFERENCES=	Preferences...		P
+GmMenuBar.PREFERENCES=	Nastavení preferencí...		P
 GmMenuBar.EXIT=			Konec				X
 
 # Edit menu
@@ -109,9 +109,9 @@ GmMenuBar.DUPLICATE=		Duplikovat	C
 GmMenuBar.PROPERTIES=		Properties	P
 
 # Resources menu
-GmMenuBar.MENU_RESOURCES=	Resources			R
-GmMenuBar.CHECKNAMES=		Check Names			N
-GmMenuBar.CHECKIDS=			Check Ids			I
+GmMenuBar.MENU_RESOURCES=	Zdroje			R
+GmMenuBar.CHECKNAMES=		Zkontroluje jména			N
+GmMenuBar.CHECKIDS=			Zkontrolovat Ids			I
 GmMenuBar.FIND=				Najít...				F
 GmMenuBar.EXPAND=			Rozšíření				E
 GmMenuBar.COLLAPSE=			Collapse			C
@@ -120,14 +120,14 @@ FindResourceDialog.TITLE=Find Resource
 FindResourceDialog.MESSAGE=Resource name:
 
 # Help menu
-GmMenuBar.MENU_HELP=		Help				H
+GmMenuBar.MENU_HELP=		Pomoc				H
 GmMenuBar.DOCUMENTATION=	Dokumentace		D
-GmMenuBar.WEBSITE=			Website				W
-GmMenuBar.COMMUNITY=		Community			C
-GmMenuBar.ISSUE=			Submit Issue		S
-GmMenuBar.ABOUT=			About				A
-GmMenuBar.EXPLORELATERALGM=	Explore LateralGM	G
-GmMenuBar.EXPLOREPROJECT=	Explore Project		X
+GmMenuBar.WEBSITE=			Web stránka				W
+GmMenuBar.COMMUNITY=		Komunita			C
+GmMenuBar.ISSUE=			Odeslat problém		S
+GmMenuBar.ABOUT=			O projektu				A
+GmMenuBar.EXPLORELATERALGM=	Prozkoumat LateralGM	G
+GmMenuBar.EXPLOREPROJECT=	Prozkoumat projekt		X
 
 DocumentUndoManager.UNDO=Undo
 DocumentUndoManager.REDO=Redo
@@ -171,28 +171,28 @@ AboutBox.LICENSE=\
 	http://www.gnu.org/licenses/</a>.</p>
 
 ### Package file ###
-ProjectFile.NOICON=default icon not found, any saved files will have no icon \
-	unless one is assigned manually.
-ProjectFileReader.LOADTIME=time taken to load file: {0} ms
-ProjectFileReader.SAVETIME=time taken to save file: {0} ms
-ProjectFileReader.ERROR_INVALID={0} is not a valid GM file, initial identifier is invalid: {1}
-ProjectFileReader.ERROR_CLOSEFAILED=For some reason, the file closing failsafe has failed
-ProjectFileReader.ERROR_UNSUPPORTED={0} - GM version unsupported or file corrupt: {1}
-ProjectFileReader.BEFORE=Before {0}
+ProjectFile.NOICON=výchozí ikona nebyla nalezena, žádné uložené soubory nebudou mít žádnou ikonu \
+	pokud není přizařen ručně.
+ProjectFileReader.LOADTIME=potřebný čas k načtení souboru: {0} ms
+ProjectFileReader.SAVETIME=potřebný čas k uložení souboru: {0} ms
+ProjectFileReader.ERROR_INVALID={0} není platný soubor GM, počáteční identifikátor je neplatný: {1}
+ProjectFileReader.ERROR_CLOSEFAILED=For sz nějakého důvodu selhalo uzavření souboru
+ProjectFileReader.ERROR_UNSUPPORTED={0} - GM verze není podporována nebo je poškozen soubor: {1}
+ProjectFileReader.BEFORE=Před {0}
 ProjectFileReader.IN=In {0}, ID {1}
-ProjectFileReader.AFTER=After {0}
-GmStreamDecoder.IMAGE_SIZE_MISMATCH=Image size mismatch: {0} != {1} at filepos: {2}
+ProjectFileReader.AFTER=Po {0}
+GmStreamDecoder.IMAGE_SIZE_MISMATCH=Neshoda velikosti obrázku: {0} != {1} at filepos: {2}
 GmStreamDecoder.INVALID_BOOLEAN=invalid boolean data: {0} at filepos: {1}
-ProjectFileReader.AFTERINFO=After Game Information
+ProjectFileReader.AFTERINFO=Informace o hře
 ProjectFileReader.AFTERINFO2=In the second version after Game Information
 ProjectFileReader.INDATAFILES=In Gm5 Data File
-ProjectFileReader.ININCLUDEDFILES=In Included File
-ProjectFileReader.INTIMELINEMOMENT=In Timeline {0}, Moment {1}
-ProjectFileReader.INTIMELINEACTION=In Timeline {0}, Moment {1}, action {2}
-ProjectFileReader.INOBJECTEVENT=In Object {0}, Main event type {1}
-ProjectFileReader.INOBJECTACTION=In Object {0}, Event type {1}, action {2}
-StreamDecoder.UNEXPECTED_EOF=Unexpected end of file reached at filepos: {0}
-StreamDecoder.SEEK_SHORT=Tried to skip {0}, but only skipped {1}
+ProjectFileReader.ININCLUDEDFILES=Zahrnutý soubor
+ProjectFileReader.INTIMELINEMOMENT=Na časové ose {0}, okamžik {1}
+ProjectFileReader.INTIMELINEACTION=Na časovéé ose {0}, Moment {1}, action {2}
+ProjectFileReader.INOBJECTEVENT=V objektu {0}, Typ hlavní události {1}
+ProjectFileReader.INOBJECTACTION=V objektu {0}, Typ události {1}, akce {2}
+StreamDecoder.UNEXPECTED_EOF=Neočekávaný konec souboru dosažený na souborech: {0}
+StreamDecoder.SEEK_SHORT=Snažil se překočit {0}, ale pouze přeskočeno {1}
 StreamDecoder.SEEK_PASSED=Can''t seek to {0} from {1}, position already passed (required skip: {2})
 
 ### Package main ###
@@ -210,21 +210,21 @@ FileChooser.FORMAT_GMK=Game Maker 7/8 Files (*.gmk)
 FileChooser.FORMAT_GM6=Game Maker 6 Files (*.gm6)
 FileChooser.FORMAT_GMD=Game Maker 5.3 Files (*.gmd)
 
-FileChooser.UNRECOGNIZED_TITLE=Unrecognized File
-FileChooser.UNRECOGNIZED=<html>Unable to read file "{0}"<br/>\
+FileChooser.UNRECOGNIZED_TITLE=Nerozpoznaný soubor
+FileChooser.UNRECOGNIZED=<html>Soubor nelze přečíst "{0}"<br/>\
 						No registered readers recognize it.<br/>\
-						It is either corrupt or incompatible.</html>
+						Je poškozený nebo nekompatibilní.</html>
 
-FileChooser.ERROR_LOAD_TITLE=Error Loading File
+FileChooser.ERROR_LOAD_TITLE=Chyba při načítání souboru
 FileChooser.ERROR_LOAD=<html><style>p {margin-top: 5px; margin-bottom: 5px;}</style>\
-						<p>Your file appears to be corrupted. You can still use what LGM has managed to read, but<br>\
-						the tree has been rebuilt, so all grouping and order has been lost.<br>\
-						If you think this was caused by a bug in LGM, please submit this error report, and we<br>\
-						will do our best to fix the problem.</p>\
+						<p>Zdá se, že váš soubor je poškozen. Stále můžete použít to, co se LGM podařilo přečíst, ale<br>\
+						strom byl přestavěn, takže došlo ke ztrátě veškerého seskupení a pořadí.<br>\
+						Pokud si myslíte, že to bylo způsobeno chybou v LGM, odešlete tuto zprávu o chybě a my<br>\
+						uděláme, co bude v našich silách, abychom jsme problém vyřešili.</p>\
 						\
 						<p>Error Report:</p></html>
 
-FileChooser.ERROR_BACKUP_TITLE=Error Making Backup
+FileChooser.ERROR_BACKUP_TITLE=Při vytváření zálohy došlo k chybě
 FileChooser.ERROR_BACKUP=	Could not move {0} to a backup.\n\
 						Do you want to overwrite its contents?
 
