--- a/org/lateralgm/messages/messages_cs_CZ.properties
+++ b/org/lateralgm/messages/messages_cs_CZ.properties
@@ -49,7 +49,7 @@ ImageEffects.BRIGHTNESS=Jas:
 ImageEffects.CONTRAST=Kontrast:
 ImageEffects.RELATIVE=Relative
 ImageEffects.HUE=Hue:
-ImageEffects.SATURATION=Nysitění:
+ImageEffects.SATURATION=Nasitění:
 ImageEffects.VALUE=Value:
 ImageEffects.REPETITIONS=Opakování
 
@@ -59,12 +59,12 @@ TreeFilter.INSTANCE=Instance
 TreeFilter.VERTEX_CODE=Vertex Code
 TreeFilter.FRAGMENT_CODE=Fragment Code
 TreeFilter.MATCHES=matches
-TreeFilter.WHOLEWORD=Whole Word
+TreeFilter.WHOLEWORD=Celý svět
 TreeFilter.MATCHCASE=Case Sensitive
 TreeFilter.REGEX=Regular Expression
-TreeFilter.SEARCHIN=Search in Resources
-TreeFilter.PRUNERESULTS=Prune Results
-TreeFilter.SEARCHFOR=Search for Resources...
+TreeFilter.SEARCHIN=Hledání ve zdrojích
+TreeFilter.PRUNERESULTS=Prune výsledky
+TreeFilter.SEARCHFOR=Hledej zdroje...
 TreeFilter.NEXT=Další
 TreeFilter.PREV=Předchozí
 TreeFilter.SET=Nastavení
@@ -222,71 +222,71 @@ FileChooser.ERROR_LOAD=<html><style>p {margin-top: 5px; margin-bottom: 5px;}</st
 						Pokud si myslíte, že to bylo způsobeno chybou v LGM, odešlete tuto zprávu o chybě a my<br>\
 						uděláme, co bude v našich silách, abychom jsme problém vyřešili.</p>\
 						\
-						<p>Error Report:</p></html>
+						<p>Chybová zpráva:</p></html>
 
 FileChooser.ERROR_BACKUP_TITLE=Při vytváření zálohy došlo k chybě
-FileChooser.ERROR_BACKUP=	Could not move {0} to a backup.\n\
-						Do you want to overwrite its contents?
+FileChooser.ERROR_BACKUP=	Nelze přesunout {0} na zálohu.\n\
+						Chcete přepsat jeho obsah?
 
 FileChooser.FORCE_EXT=Force extension
 FileChooser.CONFIRM_EXTENSION=Extension {0} does not match version {1}. Use anyway?
 FileChooser.CONFIRM_REPLACE_TITLE=Uložit soubor
-FileChooser.CONFIRM_REPLACE={0} already exists. Do you wish to replace it?
+FileChooser.CONFIRM_REPLACE={0} už existuje. Přejete si jej nahradit?
 
 FileChooser.ERROR_SAVE_TITLE=Chyba při ukládání souboru
-FileChooser.ERROR_SAVE=An error occurred while saving to {0}:\n\
+FileChooser.ERROR_SAVE=Při ukládání do aplikace došlo k chybě {0}:\n\
 					{1} - {2}
 
 FileChooser.NOT_FOUND_TITLE=Soubor nenalezen!
-FileChooser.NOT_FOUND_MESSAGE=Check the file name and try again.
-FileChooser.CONFIRM_OVERWRITE_TITLE=File already exists!
-FileChooser.CONFIRM_OVERWRITE_MESSAGE=Would you like to overwrite the file anyway?
+FileChooser.NOT_FOUND_MESSAGE=Zkontrolujte název souboru a akci opakujte.
+FileChooser.CONFIRM_OVERWRITE_TITLE=Soubor již existuje!
+FileChooser.CONFIRM_OVERWRITE_MESSAGE=Chcete přesto soubor přepsat?
 
-ErrorDialog.UNCAUGHT_TITLE=Unhandled Exception
+ErrorDialog.UNCAUGHT_TITLE=Neošetřená výjimka
 ErrorDialog.UNCAUGHT_MESSAGE=	<html><style>p {margin-top: 5px; margin-bottom: 5px;}</style>\
-								<p>It appears LateralGM has encountered an issue. You may submit \
-								the following error report on the tracker which may help resolve \
-								the issue.<br>\
-								<b>Note: You will need a GitHub account.</b></p>\
-								<p>Error Report:</p></html>
-ErrorDialog.DESKTOP_TITLE=Desktop Services Unavailable
-ErrorDialog.DESKTOP_MESSAGE=	<html>Desktop services could not find a suitable program to open \
-								the URI.<br>"{0}"<br>\
-								Install a suitable program or web browser and try again.\
+								<p>Zdá se, že LateralGM zaznamenal problém. Můžete odeslat \
+								následující chybovou zprávu, která může pomoci vyřešit \
+								problém.<br>\
+								<b>Poznámka: Budete potřebovat účet GitHub.</b></p>\
+								<p>Chybová zpráva:</p></html>
+ErrorDialog.DESKTOP_TITLE=Desktopové služby nejsou k dispozici
+ErrorDialog.DESKTOP_MESSAGE=	<html>Desktopové služby nemohly najít vhodný program k otevření \
+								URI.<br>"{0}"<br>\
+								Nainstalujte vhodný program nebo webový prohlížeč a akci opakujte.\
 								</html>
-ErrorDialog.COPY=Copy to Clipboard
-ErrorDialog.SUBMIT=Submit Report
-ErrorDialog.CANCEL=Close
+ErrorDialog.COPY=Kopírovat do schránky
+ErrorDialog.SUBMIT=Odeslat zprávu
+ErrorDialog.CANCEL=Zavřít
 
 ProgressDialog.GMX_LOADING=			GMX Načítání
-ProgressDialog.GMX_SAVING=			GMX Saving
-ProgressDialog.GMK_LOADING=			GMK Loading
-ProgressDialog.GMK_SAVING=			GMK Saving
-ProgressDialog.DOCUMENT=			Document
+ProgressDialog.GMX_SAVING=			GMX Ukládání
+ProgressDialog.GMK_LOADING=			GMK Načítání
+ProgressDialog.GMK_SAVING=			GMK Ukládání
+ProgressDialog.DOCUMENT=			Dokument
 ProgressDialog.SPRITES=				Sprites
 ProgressDialog.SOUNDS=				Hudba
 ProgressDialog.BACKGROUNDS=			Pozadí
 ProgressDialog.PATHS=				Cesta
 ProgressDialog.SCRIPTS=				Scripts
 ProgressDialog.SHADERS=				Shaders
-ProgressDialog.FONTS=				Fonts
+ProgressDialog.FONTS=				Fonty
 ProgressDialog.TIMELINES=			Timelines
 ProgressDialog.OBJECTS=				Objekty
 ProgressDialog.ROOMS=				Místnost
-ProgressDialog.INCLUDEFILES=		Include Files
+ProgressDialog.INCLUDEFILES=		Zahrnuty soubory
 ProgressDialog.TRIGGERS=			Triggers
 ProgressDialog.CONSTANTS=			Constants
-ProgressDialog.PACKAGES=			Packages
-ProgressDialog.EXTENSIONS=			Extensions
-ProgressDialog.GAMEINFORMATION=		Game Information
+ProgressDialog.PACKAGES=			Balíky
+ProgressDialog.EXTENSIONS=			Rozšíření
+ProgressDialog.GAMEINFORMATION=		Informace o hře
 ProgressDialog.SETTINGS=			Nastavení hry
 ProgressDialog.POSTPONED=			Postponed References
 ProgressDialog.ROOMEXECUTION=		Room Execution
 ProgressDialog.LIBRARYCREATION=		Library Creation
 ProgressDialog.FILETREE=			Strom souborů
-ProgressDialog.FINISHED=			Finished
+ProgressDialog.FINISHED=			Hotový
 
-Listener.CONFIRM_NEW=Unsaved changes will be lost. Start a new game anyway?
+Listener.CONFIRM_NEW=Neuložené změny budou ztraceny. Zahájit novou hru?
 Listener.CONFIRM_NEW_TITLE=Nová hra?
 Listener.FILE_NOT_FOUND_TITLE=Soubor nenalezen!
 
