--- a/org/lateralgm/messages/messages_cs_CZ.properties
+++ b/org/lateralgm/messages/messages_cs_CZ.properties
@@ -19,10 +19,10 @@ ConfigurationManager.COPY=Duplikovat novou konfiguraci
 ConfigurationManager.DELETE=Smazat vybrané konfugurace
 ConfigurationManager.EDIT_SETTINGS=Upravit vybranou konfiguraci
 ConfigurationManager.EDIT_CONSTANTS=Upravit vybrané Configuration's Constants
-ConfigurationManager.NAME=Name:
+ConfigurationManager.NAME=Jméno:
 
 #Image Effects Frame
-EffectsFrame.TITLE=Image Effects
+EffectsFrame.TITLE=Efekty obrázku
 EffectsFrame.BEFORE=Před
 EffectsFrame.AFTER=Po
 EffectsFrame.CLOSE=Zavřít
@@ -116,8 +116,8 @@ GmMenuBar.FIND=				Najít...				F
 GmMenuBar.EXPAND=			Rozšíření				E
 GmMenuBar.COLLAPSE=			Collapse			C
 
-FindResourceDialog.TITLE=Find Resource
-FindResourceDialog.MESSAGE=Resource name:
+FindResourceDialog.TITLE=Najít zdroj:
+FindResourceDialog.MESSAGE=Název zdroje:
 
 # Help menu
 GmMenuBar.MENU_HELP=		Pomoc				H
