--- a/org/lateralgm/messages/messages_cs_CZ.properties
+++ b/org/lateralgm/messages/messages_cs_CZ.properties
@@ -293,8 +293,8 @@ Listener.FILE_NOT_FOUND_TITLE=Soubor nenalezen!
 Listener.INPUT_GROUPNAME=Jméno skupiny?
 Listener.DEFAULT_GROUPNAME=Skupina
 
-Listener.CONFIRM_DELETERESOURCE=Delete resources in selection?
-Listener.CONFIRM_DELETERESOURCE_TITLE=Confirm Deletion
+Listener.CONFIRM_DELETERESOURCE=Odstranit zdroje při výběru?
+Listener.CONFIRM_DELETERESOURCE_TITLE=Potvrdit vymazání
 
 Listener.CHECKNAMES_DUPLICATE=		{0} "{1}" has the same name as {2} "{3}".\n\
 									Would you like to assign a new name?
